torch manipulations added

--- a/1. Fundamentals/1.0 - fundamentals.ipynb
+++ b/1. Fundamentals/1.0 - fundamentals.ipynb
@@ -759,6 +759,89 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tensor Operations - Manipulating Tensors\n",
+    "A myriad of operations can be performed on tensors which can be arithemetic or logical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_a = torch.tensor([1, 2, 3])\n",
+    "tensor_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([11, 12, 13])\n",
+      "tensor([10, 20, 30])\n",
+      "tensor([-1,  0,  1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor_a + 10)\n",
+    "print(tensor_a * 10)\n",
+    "print(tensor_a - 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PyTorch Built-in Functions\n",
+    "PyTorch provides myriad of built-in functions which includes\n",
+    "* `torch.mul`\n",
+    "* `torch.add`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([10, 20, 30])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_b = torch.mul(tensor_a, 10)\n",
+    "tensor_b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
