matrix multiplication code

--- a/1. Fundamentals/1.0 - fundamentals.ipynb
+++ b/1. Fundamentals/1.0 - fundamentals.ipynb
@@ -842,6 +842,66 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Multiplication\n",
+    "* element-wise\n",
+    "* matrix-multiplication (most commonly used operation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3],\n",
+      "        [4, 5, 6]])\n",
+      "tensor([[ 7,  8],\n",
+      "        [ 9, 10],\n",
+      "        [11, 12]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor_a = torch.tensor([[1, 2, 3],\n",
+    "                         [4, 5, 6]])\n",
+    "\n",
+    "tensor_b = torch.tensor([[7, 8],\n",
+    "                         [9, 10],\n",
+    "                         [11, 12]])\n",
+    "\n",
+    "print(tensor_a)\n",
+    "print(tensor_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (3) must match the size of tensor b (2) at non-singleton dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[63], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m tensor_a \u001b[39m*\u001b[39;49m tensor_b\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (3) must match the size of tensor b (2) at non-singleton dimension 1"
+     ]
+    }
+   ],
+   "source": [
+    "tensor_a * tensor_b"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
